# eeg

./: .gitattributes  .gitignore  README.md  big_hand.ipynb  big_hand_position_llm.pth  cnn.ipynb  data.csv  joint_data.npy  pyproject.toml
config/: eeg_basic_cnn.yaml  eeg_basic_llm.yaml  eeg_llm.yaml  eeg_lstm.yaml  eeg_regression.yaml  labram_basic_lin.yaml  log_position_llm.yaml  positionllm.yaml  temporal.yaml  temporal_eeg.yaml
data/: open_fist_front.npy  open_index_front.npy  open_pew_front.npy  test.npy  test2.npy
data/edf/: eeg_test.edf
data/relative_old/: finger_wave_front.npy  open_middle_front.npy  open_ring_front.npy  random_front.npy
data/wandb/: latest-run
eeg/: __init__.py  model.py  train.py
eeg/big_hand/: README.md
eeg/data/: README.md  (+2 more)
examples/: README.md  train_e2e_overfit.py  train_overfit.py
figures/: README.md
models/: README.md
notebooks/: README.md  big_eeg.ipynb  big_hand.ipynb  cnn.ipynb  data.csv  data_collection.ipynb  data_debug.ipynb  eeg.ipynb  eeg_eye_dataset.ipynb  eeg_hand_dataset.ipynb  joint_data.npy  temporal_inference.ipynb  vqvae_exploration.ipynb
scripts/: README.md  big_hand_llm.py  collect_data.py  eeg_cnn.py  eeg_cnn_train.py  eeg_llm.py  eval_temporal_model.py  position_llm_training.py  temp.py  temporal_inference.py  train_basic_labram.py  train_big_eeg_llm.py  train_e2e.py  train_eeg_cnn.py  train_eeg_llm.py  train_eeg_lstm.py  train_kmeans.py  train_lin_reg_eeg.py  train_overfit.py  train_overfit_regions_deltas.py  train_temporal_eeg_model.py  train_temporal_model.py  train_vqvae.py  training.py
(+181 files in other folders)
