[project]
name = "eeg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "mediapipe>=0.10.14",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]

[tool.setuptools]
packages = ["eeg"]
