[project]
name = "eeg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.3",
    "dora-rs==0.3.13",
    "dora-rs-cli>=0.4.1",
    "dotenv>=0.9.9",
    "future>=1.0.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "mediapipe>=0.10.14",
    "mink>=0.0.13",
    "mne>=1.11.0",
    "mujoco>=3.3.7",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.1",
    "pyarrow>=22.0.0",
    "pywinusb>=0.4.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "wandb>=0.22.3",
]

[tool.setuptools]
packages = ["eeg"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
